syntax = "proto3";
package deconz;

service Daemon {
    rpc ApsStream(stream ApsStreamRequest) returns (stream ApsStreamResponse) {}
}

message ApsStreamRequest {}

message ApsStreamResponse {}